--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,21 @@ language: python
 python:
   - "3.8"
 install:
+  - pip install codecov
+  - pip install coverage
   - pip install -r requirements.txt
+
 script:
   - python -m unittest discover -s tests/
+
+after_success:
+  - codecov
+
+deploy:
+  provider: pypi
+  user: __token__
+  password: PYPI_TOKEN
+  distributions: "sdist bdist_wheel"
+  skip_existing: true
+  on:
+    branch: master
