try to fix code coverage report upload

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
   - python -m unittest discover -s tests/
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash) -R .
 
 deploy:
   provider: pypi
