--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
 language: python
 
 python:
-  - "3.6"
-  - "3.7"
-  - "3.8"
+  - "3.9"
+  - "3.10"
+  - "3.11"
 
 os: linux
 
 dist:
   - "focal"
+  - "jammy"
 
 install:
   - pip install -r requirements.txt
